# TradingAgents

./: README_zh.md  main.py  pyproject.toml  setup.py
.qoder/repowiki/zh/content/: API参考.md  贡献指南.md  项目概述.md
.qoder/repowiki/zh/content/快速开始/: CLI快速入门.md  Python API使用示例.md  安装指南.md  快速开始.md
.qoder/repowiki/zh/content/数据流与集成/: Finnhub 数据集成.md  Google News 数据集成.md  Reddit 社交媒体集成.md  数据流与集成.md
.qoder/repowiki/zh/content/智能体系统/: 交易团队.md  分析团队.md  智能体系统.md  研究团队.md  风险管理团队.md
.qoder/repowiki/zh/content/最佳实践/: 性能优化.md  成本控制.md  最佳实践.md  风险管理.md
.qoder/repowiki/zh/content/核心架构/: 信号处理.md  条件逻辑.md  核心架构.md
.qoder/repowiki/zh/content/配置与定制/: LLM配置.md  分析深度设置.md  数据源配置.md  配置与定制.md
.qoder/repowiki/zh/content/高级功能/: 反思学习机制.md  状态传播优化.md  (+2 more)
.qoder/repowiki/zh/meta/: repowiki-metadata.json
JTrade/: PROJECT_STATUS.md  QUICK_START.md  README.md  pom.xml
JTrade/doc/: COMPLETION_REPORT.md  PROJECT_STATISTICS.md  PROMPT_COMPARISON.md
JTrade/scripts/: jtrade.bat  jtrade.sh
JTrade/src/assembly/: distribution.xml
JTrade/src/main/resources/: application-dev.yml  application-prod.yml  application.yml  logback-spring.xml
cli/: main.py  models.py  utils.py
tradingagents/: default_config.py
tradingagents/agents/: __init__.py
tradingagents/agents/analysts/: fundamentals_analyst.py  market_analyst.py  news_analyst.py  social_media_analyst.py
tradingagents/agents/managers/: research_manager.py  risk_manager.py
tradingagents/agents/researchers/: bear_researcher.py  bull_researcher.py
tradingagents/agents/risk_mgmt/: aggresive_debator.py  conservative_debator.py  neutral_debator.py
tradingagents/agents/trader/: trader.py
tradingagents/agents/utils/: agent_states.py  agent_utils.py  memory.py
tradingagents/dataflows/: __init__.py  config.py  finnhub_utils.py  googlenews_utils.py  interface.py  reddit_utils.py  stockstats_utils.py  utils.py  yfin_utils.py
tradingagents/graph/: __init__.py  conditional_logic.py  propagation.py  reflection.py  setup.py  signal_processing.py  trading_graph.py
(+74 files in other folders)
