# 项目配置
[project]
name = "tradingagents"                           # 项目名称
version = "0.1.0"                                # 版本号
description = "Add your description here"        # 项目描述
readme = "README.md"                             # README文件
requires-python = ">=3.10"                       # Python版本要求
# 项目依赖
dependencies = [
    "akshare>=1.16.98",                          # 中国股票数据获取库
    "backtrader>=1.9.78.123",                    # 回测框架
    "chainlit>=2.5.5",                           # AI应用开发框架
    "chromadb>=1.0.12",                          # 向量数据库
    "eodhd>=1.0.32",                             # EOD历史数据API
    "feedparser>=6.0.11",                        # RSS订阅解析器
    "finnhub-python>=2.4.23",                    # Finnhub金融数据API
    "langchain-anthropic>=0.3.15",               # Anthropic集成
    "langchain-experimental>=0.3.4",             # LangChain实验功能
    "langchain-google-genai>=2.1.5",             # Google Gemini集成
    "langchain-openai>=0.3.23",                  # OpenAI集成
    "langgraph>=0.4.8",                          # LangGraph图计算框架
    "pandas>=2.3.0",                             # 数据分析库
    "parsel>=1.10.0",                            # HTML/XML数据提取库
    "praw>=7.8.1",                               # Reddit API封装
    "pytz>=2025.2",                              # 时区处理库
    "questionary>=2.1.0",                        # 命令行交互库
    "redis>=6.2.0",                              # Redis数据库
    "requests>=2.32.4",                          # HTTP请求库
    "rich>=14.0.0",                              # 终端美化库
    "setuptools>=80.9.0",                        # Python包管理工具
    "stockstats>=0.6.5",                         # 股票技术指标计算库
    "tqdm>=4.67.1",                              # 进度条库
    "tushare>=1.4.21",                           # 中国股票数据接口
    "typing-extensions>=4.14.0",                 # 类型提示扩展
    "yfinance>=0.2.63",                          # Yahoo Finance数据获取库
]
